[add]ブラウザからGETとPOSTで操作できるように変更

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,5 +1,13 @@
 @import "tailwindcss";
 
+body{
+  margin-left: 10px
+}
+
+button {
+  @apply bg-blue-500 text-white font-bold py-2 px-4 mb-2 rounded;
+}
+
 :root {
   --background: #ffffff;
   --foreground: #171717;
